manifests/environments/yt01/apps/web-api-so/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-api-so
spec:
  hostnames:
    - dialogporten.yt01.dis-core.altinn.cloud
